--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bulma": "^0.8.2",
     "core-js": "^3.6.4",
     "uuid": "^8.0.0",
-    "vue": "^2.6.11"
+    "v-calendar": "^1.0.8",
+    "vue": "^2.6.11",
+    "vue-moment": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
