--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "uuid": "^8.0.0",
     "v-calendar": "^1.0.8",
     "vue": "^2.6.11",
+    "vue-kakao-login": "^1.0.5",
     "vue-moment": "^4.1.0"
   },
   "devDependencies": {
