--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.1.0",
+    "@tensorflow/tfjs": "^2.7.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
     "bulma": "^0.8.2",
