--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tensorflow-models/body-pix": "^2.0.5",
     "@tensorflow-models/coco-ssd": "^2.1.0",
     "@tensorflow/tfjs": "^2.7.0",
+    "@tensorflow/tfjs-converter": "^2.0.1",
+    "@tensorflow/tfjs-core": "^2.7.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
     "bulma": "^0.8.2",
     "core-js": "^3.6.4",
+    "jquery": "^3.5.1",
+    "node-pre-gyp": "^0.16.0",
     "uuid": "^8.0.0",
     "v-calendar": "^1.0.8",
     "vue": "^2.6.11",
@@ -29,7 +34,7 @@
     "css-loader": "^3.5.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "vue-template-compiler": "^2.6.11"
